# advent-of-code-2019

./: README.md  adventofcode2019.cabal
day-01/: Day01.hs  Main.hs
day-02/: Day02.hs  Main.hs  day02.cabal
day-03/: Day03.hs  Main.hs  day03.cabal
day-04/: Day04.hs  Main.hs  day04.cabal
day-05/: Day05.hs  Main.hs  day05.cabal
day-06/: Day06.hs  Main.hs  day06.cabal
day-07/: Day07.hs
day-08/: Day08.hs
day-09/: Day09.hs
day-10/: Day10.hs
day-11/: Day11.hs
run/: Main01.hs  Main02.hs  Main03.hs  Main04.hs  Main05.hs  Main06.hs
