cabal-version: 2.2

name: adventofcode2019
version: 0.1.0.0
author: rvLMdE7
build-type: Simple

source-repository head
  type: git
  location: https://github.com/rvLMdE7/advent-of-code-2019

common common-options
  default-language: Haskell2010
  default-extensions:
      ImportQualifiedPost
    , NumericUnderscores
  build-depends:
      base ^>=4.14
    , bytestring
    , containers
    , flow
    , text
    , th-printf
    , vector

common common-exe-options
  import: common-options
  build-depends: adventofcode2019
  hs-source-dirs: run

library
  import: common-options
  hs-source-dirs:
      day-01
    , day-02
    , day-03
    , day-04
    , day-05
    , day-06
  exposed-modules:
      Day01
    , Day02
    , Day03
    , Day04
    , Day05
    , Day06

executable day01
  import: common-exe-options
  mixins: adventofcode2019 (Day01 as Day)
  main-is: Main.hs

executable day02
  import: common-exe-options
  mixins: adventofcode2019 (Day02 as Day)
  main-is: Main.hs

executable day03
  import: common-exe-options
  mixins: adventofcode2019 (Day03 as Day)
  main-is: Main.hs

executable day04
  import: common-exe-options
  mixins: adventofcode2019 (Day04 as Day)
  main-is: Main.hs

executable day05
  import: common-exe-options
  mixins: adventofcode2019 (Day05 as Day)
  main-is: Main.hs

executable day06
  import: common-exe-options
  mixins: adventofcode2019 (Day06 as Day)
  main-is: Main.hs
